--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/dyCuong03/playable_tracking#readme",
   "dependencies": {
+    "@google-cloud/bigquery": "^8.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.0",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1",
-    "dotenv": "^16.4.0"
+    "morgan": "^1.10.1"
   }
 }
